Fix error & warnings.

--- a/integrations/esri-sceneview-wasm/esri-demo.html
+++ b/integrations/esri-sceneview-wasm/esri-demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
-  <meta http-equiv="origin-trial" content="AuIOI30TB29gw4buNQFFWNexGiDwI8ynu05FxU2JLMIXTBq4Xov54vbmoDP9eKTZCzJpays+49NNCVwGhASptAUAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwMDAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2Mzk1MjYzOTl9">
+<html lang="en">
   <meta charset="utf-8" />
+  <meta http-equiv="origin-trial" content="AuIOI30TB29gw4buNQFFWNexGiDwI8ynu05FxU2JLMIXTBq4Xov54vbmoDP9eKTZCzJpays+49NNCVwGhASptAUAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwMDAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2Mzk1MjYzOTl9">
   <meta name="viewport" content="initial-scale=1,width=device-width" />
   <title>New udSDK Esri Demo</title>
 
@@ -405,7 +405,7 @@
 
         // Create the map and view
         var map = new Map({
-          basemap: "satelite",
+          basemap: "satellite",
           ground: "world-elevation"
         });
 
@@ -516,7 +516,7 @@
       </div>
       <h4 id="descTextAttr" class="descTextAttr"></h4>
     </div> -->
-    <div class="unsupportMsg" style="display: none;">
+    <div class="unsupportMsg">
       <h1>Sorry, this device is not supported.</h1>
       <h2>
         Viewing on a mobile or tablet device? This demo is a desktop application only. We support the latest versions of Google Chrome and Microsoft Edge on Windows, Mac, and Ubuntu.
