Configure pop up when you click on any 3D entity displays on top right corner.

--- a/integrations/esri-sceneview-wasm/esri-demo.html
+++ b/integrations/esri-sceneview-wasm/esri-demo.html
@@ -435,6 +435,15 @@
             },
             heading: 359.47,
             tilt: 0.2
+          },
+          // Pop-up configureation
+          popup: {
+            dockEnabled: true,
+            dockOptions: {
+              // buttonEnabled: false,
+              breakpoint: false,
+              position: "top-right"
+            }
           }
         });
         // assign viewer with this view.
